# dask-janelia

./: .gitignore  .pre-commit-config.yaml  README.md  pre-commit-config.yaml  pyproject.toml  requirements.txt
dask_janelia/: __init__.py  dask_janelia.py  deploy.py  test_deploy.py
examples/: distributed-example.yaml  example_notebook.ipynb  example_script.py
src/dask_janelia/: __init__.py  deploy.py
tests/: test_deploy.py
